# strictput

./: .gitignore  .travis.yml  LICENSE  README  strictput.cabal
Data/: StrictPut.hs
Data/StrictPut/: Buffer.hs  DelayedInput.hs  LookBehind.hs  Marker.hs  PutM.hs  Types.hs
bench/: SimpleOutput.hs  delayed-input.c  delayed-input.hs
scripts/: run-coverage.sh
test/: Main.hs  delayed-put  delayed-put.hs
