name:                strictput
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Alexander Vershilov
maintainer:          alexander.vershilov@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Data.StrictPut
  -- other-modules:       
  build-depends:       base ==4.6.*, bytestring ==0.10.*
  ghc-options:        -Wall
                      -O2
                      -fmax-simplifier-iterations=10
                      -fdicts-cheap
                      -fspec-constr-count=6



-- benchmark bench-strictput-all
--   type:               exitcode-stdio-1.0
--   hs-source-dirs:     bench
--   main-is:            BenchAll.hs
--   build-depends:      base, criterion
--   ghc-options:        -O2
--                       -fmax-simplifier-iterations=10
--                       -fdicts-cheap
--                       -fspec-constr-count=6
