name:                strictput
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Alexander Vershilov <alexander.vershilov@gmail.com>, Andreas Voellmy <andreas.voellmy@yale.edu>
maintainer:          alexander.vershilov@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Data.StrictPut
  -- other-modules:       
  build-depends:       base ==4.6.*, bytestring ==0.10.2.*
  ghc-options:        -Wall
                      -O2
                      -fmax-simplifier-iterations=10
                      -fdicts-cheap
                      -fspec-constr-count=6



benchmark bench-strictput-simple-output
  type:               exitcode-stdio-1.0
  hs-source-dirs:     bench
  main-is:            SimpleOutput.hs
  build-depends:      base, criterion, bytestring, strictput, silently
  ghc-options:        -O2
                      -fmax-simplifier-iterations=10
                      -fdicts-cheap
                      -fspec-constr-count=6

benchmark bench-delayed-input
  type:               exitcode-stdio-1.0
  hs-source-dirs:     bench
  main-is:            delayed-input.hs
  build-depends:      base, criterion, bytestring, strictput, silently
  ghc-options:        -O2
                      -fmax-simplifier-iterations=10
                      -fdicts-cheap
                      -fspec-constr-count=6
